# failover-forge

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
src/: canary.rs  drill.rs  main.rs  manifest.rs  report.rs  types.rs
