[package]
name = "failover-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "Akeyless region failover drill orchestrator — continuous canary, gap measurement, structured event emission, tarball output"
repository = "https://github.com/pleme-io/failover-forge"

[[bin]]
name = "failover-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
drill-core = { path = "../drill-core" }

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
